# beat-docile

./: .gitignore  EVAL_SPEC.md  KNOWLEDGE_BASE.md  LICENSE  PLAN_V2.md  PRIMER.md  README.md  idea_dllms.md  plan.md  pyproject.toml  run_inference_layoutlmv3.sh
runpod/: README.md  download_data.sh  fetch_results.sh  inference.sh  qwen3vl_runbook.md  qwen_vl_train.py  run_v5b_50.py  setup.sh  setup_qwen.sh  train_large.sh
tests/: test_bbox_verify.py  test_classifiers.py  test_cls_candidates.py  test_cluster_infer.py  test_data.py  test_donut_extract.py  test_ensemble.py  test_glm_ocr_extract.py  test_haiku_verify.py  test_oracle_extract.py  test_precise_align.py  test_qwen3vl_extract.py  test_react_extract.py  test_refiners.py  test_text_extract.py  test_tools.py  test_v6_pipeline.py  test_validators.py
tools/: bbox_verify_val_500.py  build_cluster_scripts.py  build_sail_index.py  cluster_tightness_check.py  dedup_50.py  ensemble_v2_250.py  ensemble_v2_4way_250.py  ensemble_v2_variants.py  eval_lir.py  eval_lir_chained.py  eval_sail_no_match.py  field_instructions_50.py  monitor_and_pull.sh  neon_build_train_embeddings.py  no_match_novelty_check.py  oracle_prepass_250.py  per_field_breakdown.py  prep_vlm_training_data.py  rebuild_snap_cache_200dpi.py  refiner_guard_50.py  refiner_guard_500.py  region_crop_plan.md  run_classifier_rerank_250.py  run_clip_cluster.py  run_cls_aug_ab.py  run_code_factory_50.py  run_disambiguator_50.py  run_doclayout_50.py  run_donut_eval.py  run_dspy_eval.py  run_dspy_gepa.py  run_dspy_optimize.py  run_fieldinst_ab.py  run_gemini_250.py  (+25 more)
(+43 files in other folders)
