[project]
name = "beat-docile"
version = "0.1.0"
description = "Track A + B pipelines for the DocILE KILE/LIR benchmark"
authors = [
    { name = "beat_docile contributors" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "anthropic>=0.60",
    "google-cloud-aiplatform>=1.90",
    "docile-benchmark>=0.3",
    "pydantic>=2.10",
    "httpx>=0.28",
    "polars>=1.25",
    "pillow>=11.1",
    "typer>=0.15",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "gliner>=0.2",
    "sentence-transformers>=5.4.1",
    "dspy>=3.1.3",
    "ultralytics>=8.4.38",
]

[project.optional-dependencies]
vertex = ["anthropic[vertex]>=0.60"]
gpu = [
    "torch>=2.5",
    "python-doctr>=1.0",
    "open-clip-torch>=2.30",
    "transformers>=4.48",
]

[project.scripts]
bd = "beat_docile.cli:app"
beat_docile-v6 = "beat_docile.v6_cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "ipykernel>=6.29",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_api: marks tests that require live API access",
]
